# python_automation_hw_18

./: .gitignore  log_helper.py  pyproject.toml
tests/: test_demowebshop.py
